# illuin-mlops

./: .gitignore  Dockerfile  README.md  addDummyModel.py  addModelToGcp.py  addModelToMLFlow.py  batchProcessing.py  buildCsvDataset.py  clientQuickStart.py  config.yaml  configMinimal.yaml  data-viz.py  downloadHFDataset.py  draft.py  finewebClassifier.py  gcpUtils.py  gcp_utils.py  languageClassificationExample.py  loadtest.sh  loafMlFlowModel.py  localApp.py  localConfig.yaml  main.py  model.py  predict.py  processDataset.py  processDatasetRay.py  pyproject.toml  rayClusterSetup.py  rayServe.py  requirements.txt  runMlFlowInference.py  serveLocalClassifier.py  serveLocalDummy.py  serveLocalTranslation.py  serveQuickstart.py  serveQuickstartLocal.py  serveQuickstartRemote.py  train.py  utils.py
Archive/: eduClassifier.py  input.txt  node-config.yaml  rayClusterSetup.py
Archive/fasApiApp/: requirements.txt
app/: gcp_utils.py  main.py  predict.py  requirements.txt
archive/: buildDataset.py
drafts/: eduClassifier.py
