[tool.poetry]
name = "illuin-mlops"
version = "0.1.0"
description = "a dope mlops pipeline"
authors = ["Matthieu Neau"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.46.2"
torch = "^2.5.1"
datasets = "^3.1.0"
sentence-transformers = "^3.3.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
