[tool.poetry]
name = "illuin-mlops"
version = "0.1.0"
description = "a dope mlops pipeline"
authors = ["Matthieu Neau"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.46.2"
torch = "^2.5.1"
datasets = "^3.1.0"
sentence-transformers = "^3.3.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
google-cloud-storage = "^2.19.0"
scikit-learn = "^1.6.1"
dvc = { extras = ["gcs"], version = "^3.58.0" }
ray = {extras = ["default"], version = "^2.40.0"}
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
